[package]
name = "nc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ammonia = "3.3.0"
anyhow = "1.0.69"
axum = "0.6.18"
axum-macros = "0.3.8"
base64 = "0.21.2"
chrono = { version = "0.4.26", features = ["serde"] }
dotenvy = "0.15.7"
futures = "0.3.28"
hmac = "0.12.1"
hyper = "0.14.27"
regex = "1.9.1"
serde = { version = "1.0.171", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
sha2 = "0.10.7"
sqlx = { version = "0.6", features = ["json", "runtime-async-std-native-tls", "postgres", "uuid", "chrono", "offline" ] }
tokio = { version = "1.29.1", features = ["full"] }
tower = "0.4.13"
tower-http = "0.4.1"
uuid = { version = "1.3.0", features = ["v4"] }
